test/bad/arrays/comprehension11.px

[for x + 1 in [0] yield x]
